.ci/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabiane-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabiane-data
  template:
    metadata:
      labels:
        app: sabiane-data
    spec:
      containers:
        - name: sabiane-data
          image: inseefrlab/sabiane-data:latest
          imagePullPolicy: Always
